Adds bugzilla helper and adds a flash notice div

--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -18,7 +18,8 @@ Display Current Graphs <br />
     End Date <%= date_select(:end_date, "end", :discard_day => true) %><br>
     <%= submit_tag %>
 <% end %>
-<%= @graph_query%>
+<%= @graph_query %>
+<%= @bugzilla %>
 
 
 
