--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -4,6 +4,7 @@ Enter New Graph information
 <%= form_for @graph do |g| -%>
     Graph Name: <%= g.text_field :name %><br />
     Search: <%= g.text_field :search %><br />
+    Search Summary <%= g.check_box :in_summary %><br />
     <%= g.submit("Add graph") %>
 <% end -%>
 <hr>
