Adds bugzilla call when Save Changes is clicked

--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -18,8 +18,7 @@ Display Current Graphs <br />
     End Date <%= date_select(:end_date, "end", :discard_day => true) %><br>
     <%= submit_tag %>
 <% end %>
-<%= @graph_query %>
-<%= @bugzilla %>
+Total Bugs: <%= @bugzilla_ids.size %>
 
 
 
