--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -11,14 +11,22 @@ Enter New Graph information
 Display Current Graphs <br />
 <%= render @graphs %>
 <hr>
-<% products = [["Luminate Online", "1"], ["Luminate CRM", "2"], ["BBCRM Integration", "3"]] %>
+<% products = [["Luminate Online", "Luminate%20Online"], ["Luminate CRM", "Luminate%20CRM"], ["BBCRM Integration", "BBCRM%20Integration"]] %>
 <%= form_tag "/" do %>
-    Product: <%= select_tag(:product_id, options_for_select(products)) %> <br>
+    Product: <%= select_tag(:product, options_for_select(products)) %> <br>
     Start Date <%= date_select(:start_date, "start", :discard_day => true) %> <br>
     End Date <%= date_select(:end_date, "end", :discard_day => true) %><br>
     <%= submit_tag %>
 <% end %>
-Total Bugs: <%= @bugzilla_ids.size %>
+<% if @graph_query %>
+    Start Date: <%= @graph_query[:start_date] %><br>
+    End Date: <%= @graph_query[:end_date] %><br>
+    Product: <%= @graph_query[:product].gsub!("%20", " ") %><br>
+    <% @bugzilla_bugs.each do |key, value| %>
+        <%= key %>: <%= value %> bugs<br>
+    <% end %>
+<% end %>
+
 
 
 
