--- a/app/views/graphs/_graph.html.erb
+++ b/app/views/graphs/_graph.html.erb
@@ -1,3 +1,3 @@
 <li id="graph_<%= graph.id %>">
-  <%= graph.id %> <%= graph.name %> <%= graph.search %> <%= graph.in_summary %> <%= link_to "Remove", {:controller => "graphs", :id => graph.id, :action => "remove_graph"} %>
+  <%= graph.name %> <%= graph.search %> <%= link_to "Remove", {:controller => "graphs", :id => graph.id, :action => "remove_graph"} %>
 </li>
