--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -1,6 +1,8 @@
 // Place all the styles related to the Graphs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+
 #background {
     background: #DDECFF;
 }
@@ -17,6 +19,7 @@
 #currentGraphs
 {
   float: right;
+  min-width: 30% ;
 }
 
 #currentGraphs h1
@@ -31,12 +34,17 @@
   list-style-type: none;
 }
 
-#currentGraphsBorder
-{
-  border-radius: 15px;
-  border-style: solid;
-  border-width: 2px;
-  padding: 10px 10px 10px 10px;
+#currentGraphsBorder {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid #3F6AA6;
+    &:last-child {
+      border-bottom: 1px solid #3F6AA6;
+    }
+  }
 }
 
 #bugSearch
