--- a/app/views/graphs/_graph.html.erb
+++ b/app/views/graphs/_graph.html.erb
@@ -1,3 +1,6 @@
 <li id="graph_<%= graph.id %>">
-  <%= graph.name %> <%= graph.search %> <%= link_to "Remove", {:controller => "graphs", :id => graph.id, :action => "remove_graph", :remote => true} %>
+  <%= graph.name %>
+  <div class="pull-right">
+    <%= graph.search %> <%= link_to "Remove", {:controller => "graphs", :id => graph.id, :action => "remove_graph"} %>
+  </div>
 </li>
