--- a/app/views/graphs/index.js.erb
+++ b/app/views/graphs/index.js.erb
@@ -1,1 +1,2 @@
 $("#currentGraphsBorder").html("<%= escape_javascript(render @graphs) %>");
+$("#graph").html("<% if @graph_query %>Total time to graph: <%= @total_time %><br><%= escape_javascript(high_chart('bar_graph', @bar_graph)) -%><br><%= escape_javascript(high_chart('line_graph', @line_graph)) %><% end %>");
