cleans up javascript file and adds if statement

--- a/app/views/graphs/remove_graph.js.erb
+++ b/app/views/graphs/remove_graph.js.erb
@@ -1,1 +1,5 @@
-$("#currentGraphsBorder").html("<%= escape_javascript(render @graphs) %>");
+$("#currentGraphsBorder").html("<% if !@graphs.empty? %>\
+                                <%= escape_javascript(render @graphs) %>\
+                                <% else %>\
+                                No graphs have been added\
+                                <% end %>");
