played around with css to match Don's mock up

--- a/app/views/graphs/_graph.html.erb
+++ b/app/views/graphs/_graph.html.erb
@@ -1,6 +1,3 @@
 <li id="graph_<%= graph.id %>">
-  <%= graph.name %>
-  <div class="pull-right">
-    <%= graph.search %> <%= link_to "Remove", {:controller => "graphs", :id => graph.id, :action => "remove_graph", :remote => true} %>
-  </div>
+    <%= graph.name %> <%= link_to "x", {:controller => "graphs", :id => graph.id, :action => "remove_graph", :remote => true} %>
 </li>
