--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -1,39 +1,42 @@
 // Place all the styles related to the Graphs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-@import "bootstrap";
 
 #background {
   background: #E4F0FF;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  //padding-top: 20px;
+  //padding-bottom: 20px;
+  margin: 0;
 }
 
 
-#Main
-{
-  background: #DDECFF;
-  width: 65%;
-  margin: auto;
-  padding: 30px 10px 0px 10px;
-  border-radius: 8px;
-  border-style: solid;
-  border-width: 100%;
-  border-width: medium;
-  border-color: #D0D0D0;
+//#Main
+//{
+//  width: 65%;
+//  margin: auto;
+//  padding: 30px 10px 30px 10px;
+//}
+
+#graph_creation{
+  background: #00b6a6;
+  color: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
 #currentGraphs
 {
-  float: right;
-  min-width: 30% ;
-}
+  padding-left: 20%;
+  padding-right: 20%;
+  h1 {
+    font-size: 20px;
+    font-style: bold;
+    margin-bottom: 0px;
+  }
 
-#currentGraphs h1
-{
-  font-size: 20px;
-  font-style: bold;
-  margin-bottom: 0px;
 }
 
 #currentGraphs li
@@ -43,14 +46,17 @@
 
 #currentGraphsBorder {
   list-style: none;
+  list-style-type: none;
   margin: 0;
+  padding: 0;
   li {
-    overflow: auto;
-    padding: 10px 10px 10px 10px;
-    border-top: 1px solid #3F6AA6;
-    &:last-child {
-      border-bottom: 1px solid #3F6AA6;
-    }
+    float: left;
+    margin-right: 5px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: darkgrey;
+    border-width: 2px;
+    padding: 5px 10px 5px 10px;
   }
 }
 
@@ -75,5 +81,9 @@
   padding: 10px 20px 10px 10px;
 }
 
+select.date-select {
+  width:auto;
+  height: auto;
+}
 
 
