adds navbar along with some structural changes

--- a/app/assets/stylesheets/graphs.css.scss
+++ b/app/assets/stylesheets/graphs.css.scss
@@ -5,17 +5,10 @@
 
 #background {
   background: #eeedd5;
-  margin: 0;
+  margin-top: 20px;
 }
 
 #graph_creation{
-  background: #00b6a6;
-  color: #ffffff;
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-  padding-left: 15%;
-  padding-right: 15%;
 
   #loader{
     padding-top: 5px;
