--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -1,4 +1,4 @@
-<div id="graph_creation" >
+<div id="graph_creation" class="main-container">
     <div id="createGraph">
       <h2>Enter New Graph information</h2>
     <%= form_for(@graph, remote:true, :html=>{:class=>"form-inline"}) do |g| -%>
