--- a/app/views/graphs/_graph.html.erb
+++ b/app/views/graphs/_graph.html.erb
@@ -1,3 +1,3 @@
-<li id="graph_<%= graph.id %>">
+<li id="graph_<%= graph.id %>" title="<%= graph.search %>">
     <%= graph.name %> <%= link_to "x", {:controller => "graphs", :id => graph.id, :action => "remove_graph", :remote => true} %>
 </li>
