--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body id="background">
-
+    <%= render 'layouts/header' %>
     <div id="Main">
         <% flash.each do |name, msg| %>
             <%= content_tag :div, msg, class: name %>
