adds more user login functionality

--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -21,7 +21,7 @@
 </div>
 <hr/>
 
-<div id="currentGraphs" class="container-fluid">
+<div class="container-fluid secondary-container">
   <h1>Current Graph</h1> <br/>
   <ul id="currentGraphsBorder">
     <% if !@graphs.empty? %>
